<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/background_dialog"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/electric_green">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/customDialog_txtHeaderTitle_text" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/middleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topLayout"
        android:padding="@dimen/customDialog_middleLayout_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customDialog_txtContent_text"
            android:textColor="@color/dark_grey" />
    </RelativeLayout>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/middleLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/customDialog_btnCancel_marginStart"
            android:background="@drawable/background_textlayoutselected"
            android:text="@string/customDialog_btnCancel_text" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/customDialog_btnConfirm_marginEnd"
            android:background="@drawable/background_button"
            android:text="@string/customDialog_btnConfirm_text" />
    </RelativeLayout>
</RelativeLayout>